# mabscape

./: .gitignore  .vimrc  get_hash.dep  get_hash.sh  meson.build  tags
kinsrc/: Curve.cpp  Curve.h  CurveView.cpp  CurveView.h  Inspector.cpp  Inspector.h  KCorrectExp.cpp  KCorrectExp.h  KExpDecay.cpp  KExpDecay.h  KFirst.cpp  KFirst.h  KLigOnOff.cpp  KLigOnOff.h  KModel.cpp  KModel.h  KOffset.cpp  KOffset.h  KRatio.cpp  KRatio.h  KSecond.cpp  KSecond.h  KineticView.cpp  KineticView.h  Kintroller.cpp  Kintroller.h  main.cpp
libsrc/: Antibody.cpp  Antibody.h  Arrow.cpp  Arrow.h  Blast.h  Bound.cpp  Bound.h  ColourOptions.cpp  ColourOptions.h  Cone.cpp  Cone.h  Controller.cpp  Controller.h  Data.cpp  Data.h  Dialogue.h  Experiment.cpp  Experiment.h  Explorer.cpp  Explorer.h  Genes.cpp  Genes.h  GhostBound.h  Glowable_sh.h  Icosahedron.cpp  Icosahedron.h  InputDialogue.cpp  InputDialogue.h  Mesh.cpp  Mesh.h  Metadata.cpp  Metadata.h  PDBView.cpp  PDBView.h  Patch.cpp  Patch.h  PatchView.cpp  PatchView.h  PositionMap.h  Refinement.cpp  (+20 more)
libsrc/shaders/: White.h  fArrow.h  fImage.h  fProj.h  fStructure.h  gArrow.h  vArrow.h  vImage.h  vProj.h  vStructure.h
scripts_and_tutorials/: clean_competition_data.py  create_shape_mabscape.txt  ubuntu_mabscape_install.sh  ubuntu_scripts_manual.txt  ubuntu_vagabond_install.sh
